test/Fail/Issue3448.agda
-- {-# OPTIONS -v scope.decl.trace:50 #-}

data D : Set where
D : Set
